--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -7,6 +7,7 @@
         <!-- Materialize CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/styles.css">
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
     </head>
 
     <body>
