--- a/app/views/sample.ejs
+++ b/app/views/sample.ejs
@@ -7,33 +7,17 @@
     <table class="table table-striped table-dark">
       <thead>
         <tr>
-          <th scope="col">id</th>
-          <% for (let i = 1; i<18; i++ ) { %> 
-            <th scope="col">Q<%- i %></th>
-        <% } %>
+          <th scope="col">State #</th>
+          <th scope="col">Low</th>
+          <th scope="col">High</th>
         </tr>
       </thead>
       <tbody>
-        <% data_sets.forEach(entry => { %>
+        <% data_sets.forEach(state => { %>
           <tr>
-              <th scope="row"><%- entry.id %></th>
-              <td><%- entry.Q1 %></td>
-              <td><%- entry.Q2 %></td>
-              <td><%- entry.Q3 %></td>
-              <td><%- entry.Q4 %></td>
-              <td><%- entry.Q5 %></td>
-              <td><%- entry.Q6 %></td>
-              <td><%- entry.Q7 %></td>
-              <td><%- entry.Q8 %></td>
-              <td><%- entry.Q9 %></td>
-              <td><%- entry.Q10 %></td>
-              <td><%- entry.Q11 %></td>
-              <td><%- entry.Q12 %></td>
-              <td><%- entry.Q13 %></td>
-              <td><%- entry.Q14 %></td>
-              <td><%- entry.Q15 %></td>
-              <td><%- entry.Q16 %></td>
-              <td><%- entry.Q17 %></td>
+              <th scope="row"><%- state.State %></th>
+              <td><%- state.low %></td>
+              <td><%- state.high %></td>
           </tr>
 
         <% }) %>
