--- a/app/views/sample.ejs
+++ b/app/views/sample.ejs
@@ -3,21 +3,57 @@
 
 <div class="container">
   <div class=container>
-    <h1 class="display-4">Sample Data</h1>
-    <table class="table table-striped table-dark">
+    <h1 class="display-4">Original Sample Data</h1>
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Name" aria-label="Recipient's username" aria-describedby="button-addon2">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Remove</button>
+      </div>
+    </div>
+    <table class="table table-striped">
       <thead>
         <tr>
-          <th scope="col">State #</th>
-          <th scope="col">Low</th>
-          <th scope="col">High</th>
+          <th scope="col">id#</th>
+          <th scope="col">Q1</th>
+          <th scope="col">Q2</th>
+          <th scope="col">Q3</th>
+          <th scope="col">Q4</th>
+          <th scope="col">Q5</th>
+          <th scope="col">Q6</th>
+          <th scope="col">Q7</th>
+          <th scope="col">Q8</th>
+          <th scope="col">Q9</th>
+          <th scope="col">Q10</th>
+          <th scope="col">Q11</th>
+          <th scope="col">Q12</th>
+          <th scope="col">Q13</th>
+          <th scope="col">Q14</th>
+          <th scope="col">Q15</th>
+          <th scope="col">Q16</th>
+          <th scope="col">Q17</th>
         </tr>
       </thead>
       <tbody>
         <% data_sets.forEach(state => { %>
           <tr>
-              <th scope="row"><%- state.State %></th>
-              <td><%- state.low %></td>
-              <td><%- state.high %></td>
+              <th scope="row"><%- state.id %></th>
+              <td><%- state.Q1 %></td>
+              <td><%- state.Q2 %></td>
+              <td><%- state.Q3 %></td>
+              <td><%- state.Q4 %></td>
+              <td><%- state.Q5 %></td>
+              <td><%- state.Q6 %></td>
+              <td><%- state.Q7 %></td>
+              <td><%- state.Q8 %></td>
+              <td><%- state.Q9 %></td>
+              <td><%- state.Q10 %></td>
+              <td><%- state.Q11 %></td>
+              <td><%- state.Q12 %></td>
+              <td><%- state.Q13 %></td>
+              <td><%- state.Q14 %></td>
+              <td><%- state.Q15 %></td>
+              <td><%- state.Q16 %></td>
+              <td><%- state.Q17 %></td>
           </tr>
 
         <% }) %>
