--- a/app/views/visual.ejs
+++ b/app/views/visual.ejs
@@ -9,47 +9,158 @@
 </head>
 <body>
 
-<canvas id="myChart" width="400" height="400"></canvas>
-<script>
-    var ctx = document.getElementById("myChart").getContext('2d');
-    var myChart = new Chart(ctx, {
-        type: 'horizontalBar',
-        data: {
-            labels: <%- JSON.stringify(labellist); %>,
-            datasets: [{
-                label: 'LOW',
-                data: <%- JSON.stringify(datalist[0]); %>,
-                backgroundColor: "rgba(255,0,0,0.2)"
-            }, {
-                label: 'MEDIUM',
-                backgroundColor: "rgba(0,255,0,0.2)",
-                data: <%- JSON.stringify(datalist[1]); %>,
-            }, {
-                label: 'HIGH',
-                backgroundColor: "rgba(0,0,255,0.2)",
-                data: <%- JSON.stringify(datalist[2]); %>,
-            }]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                    ticks: {
-                        beginAtZero:true
-                    },
-                    stacked: true
-                }],
-                xAxes: [{
-                    stacked: true
-                }]
-            }
-        }
-    });
-</script>
+
 
 <div class="container">
   <div class=container>
     
-    <h1 class="display-4">Best students</h1>
+    <h1 class="display-4">Counts for Questions</h1>
+    
+    <h3 class="display-6">Interpretation and Interpersonal Skill Development</h3>
+    <canvas id="myChart" width="400" height="200"></canvas>
+    <script>
+        var ctx = document.getElementById("myChart").getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'horizontalBar',
+            data: {
+                labels: <%- JSON.stringify(labellist.slice(0,5)); %>,
+                datasets: [{
+                    label: 'Disagree',
+                    data: <%- JSON.stringify(datalist[0].slice(0,5)); %>,
+                    backgroundColor: "rgba(255,0,0,0.2)"
+                }, {
+                    label: 'Agree',
+                    backgroundColor: "rgba(0,255,0,0.2)",
+                    data: <%- JSON.stringify(datalist[1].slice(0,5)); %>,
+                }, {
+                    label: 'Strongly Agree',
+                    backgroundColor: "rgba(0,0,255,0.2)",
+                    data: <%- JSON.stringify(datalist[2].slice(0,5)); %>,
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true
+                        },
+                        stacked: true
+                    }],
+                    xAxes: [{
+                        stacked: true
+                    }]
+                }
+            }
+        });
+    </script>
+
+    <h3 class="display-6">Community Engagement Development</h3>
+    <canvas id="myChart2" width="400" height="200"></canvas>
+    <script>
+        var ctx = document.getElementById("myChart2").getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'horizontalBar',
+            data: {
+                labels: <%- JSON.stringify(labellist.slice(5,10)); %>,
+                datasets: [{
+                    label: 'LOW',
+                    data: <%- JSON.stringify(datalist[0].slice(5,10)); %>,
+                    backgroundColor: "rgba(255,0,0,0.2)"
+                }, {
+                    label: 'MEDIUM',
+                    backgroundColor: "rgba(0,255,0,0.2)",
+                    data: <%- JSON.stringify(datalist[1].slice(5,10)); %>,
+                }, {
+                    label: 'HIGH',
+                    backgroundColor: "rgba(0,0,255,0.2)",
+                    data: <%- JSON.stringify(datalist[2].slice(5,10)); %>,
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true
+                        },
+                        stacked: true
+                    }],
+                    xAxes: [{
+                        stacked: true
+                    }]
+                }
+            }
+        });
+    </script>
+
+    <h3 class="display-6">Feedback on Interpretation Resources / Materials</h3>
+    <canvas id="myChart3" width="400" height="280"></canvas>
+    <script>
+        var ctx = document.getElementById("myChart3").getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'horizontalBar',
+            data: {
+                labels: <%- JSON.stringify(labellist.slice(10,17)); %>,
+                datasets: [{
+                    label: 'LOW',
+                    data: <%- JSON.stringify(datalist[0].slice(10,17)); %>,
+                    backgroundColor: "rgba(255,0,0,0.2)"
+                }, {
+                    label: 'MEDIUM',
+                    backgroundColor: "rgba(0,255,0,0.2)",
+                    data: <%- JSON.stringify(datalist[1].slice(10,17)); %>,
+                }, {
+                    label: 'HIGH',
+                    backgroundColor: "rgba(0,0,255,0.2)",
+                    data: <%- JSON.stringify(datalist[2].slice(10,17)); %>,
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true
+                        },
+                        stacked: true
+                    }],
+                    xAxes: [{
+                        stacked: true
+                    }]
+                }
+            }
+        });
+    </script>
+
+    <h3 class="display-6">Average Achievement Scroe</h3>
+    <canvas id="average_chart" width="400" height="400"></canvas>
+    <script>
+        var ctx = document.getElementById("average_chart").getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'horizontalBar',
+            data: {
+                labels: <%- JSON.stringify(labellist); %>,
+                datasets: [{
+                    label: 'average score',
+                    data: <%- JSON.stringify(count_question); %>,
+                    backgroundColor: "rgba(0,150,150,0.2)"
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true
+                        },
+                        stacked: true
+                    }],
+                    xAxes: [{
+                        stacked: true
+                    }]
+                }
+            }
+        });
+    </script>
+
+    <h1 class="display-4">Top students</h1>
     <table class="table table-striped">
       <thead>
         <tr>
@@ -69,33 +180,7 @@
       </tbody>
     </table>
 
-    <canvas id="best_student_visualization" width="400" height="400"></canvas>
-    <script>
-        var ctx = document.getElementById("best_student_visualization").getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'horizontalBar',
-            data: {
-                labels: <%- JSON.stringify(selected_students[0][0]); %>,
-                datasets: [{
-                    label: 'score',
-                    data: <%- JSON.stringify(selected_students[0][1]); %>,
-                    backgroundColor: "rgba(20,100,20,0.2)"
-                }]
-            },
-            options: {
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero:true
-                        }
-                    }]
-                }
-            }
-        });
-    </script>
-
-
-    <h1 class="display-4">Worst students</h1>
+    <h1 class="display-4">Bottom students</h1>
     <table class="table table-striped">
       <thead>
         <tr>
@@ -115,29 +200,33 @@
       </tbody>
     </table>
 
-    <canvas id="worst_student_visualization" width="400" height="400"></canvas>
+    <h1 class="display-4">Students' Scores</h1>
+    <canvas id="selected_student_visualization" width="600" height="400"></canvas>
+
+    <button type="button" class="btn btn-info" id="decrese">Decrese Students</button>
+    <button type="button" class="btn btn-info" id="increse">Increse Students</button>
+
     <script>
-        var ctx = document.getElementById("worst_student_visualization").getContext('2d');
+        var ctx = document.getElementById("selected_student_visualization").getContext('2d');
         var myChart = new Chart(ctx, {
-            type: 'horizontalBar',
+            type: 'bar',
             data: {
-                labels: <%- JSON.stringify(selected_students[1][0]); %>,
+                labels: <%- JSON.stringify(selected_students[0]); %>,
                 datasets: [{
                     label: 'score',
-                    data: <%- JSON.stringify(selected_students[1][1]); %>,
-                    backgroundColor: "rgba(100,20,100,0.2)"
+                    data: <%- JSON.stringify(selected_students[1]); %>,
+                    backgroundColor: "rgba(20,100,20,0.2)"
                 }]
             },
             options: {
                 scales: {
                     yAxes: [{
-                        ticks: {
-                            beginAtZero:true
-                        }
+                        
                     }]
                 }
             }
         });
+
     </script>
 
 
@@ -168,10 +257,6 @@
 
   </div>
 </div>
-
-
-
-
 
 </body>
 </html>
